--- a/tokio-chat-client/Cargo.toml
+++ b/tokio-chat-client/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "tokio-chat-client"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["John Gallagher <jgallagher@bignerdranch.com>"]
+edition = "2018"
 
 [dependencies]
 cursive = "0.3.7"
-unicode-width = "0.1.4"
+unicode-width = "0.1"
 futures = "0.1"
 tokio-core = "0.1"
+tokio-codec = "0.1"
+tokio = "0.1"
 tokio-chat-common = { path = "../tokio-chat-common" }
