--- a/tokio-chat-server/Cargo.toml
+++ b/tokio-chat-server/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "tokio-chat-server"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["John Gallagher <jgallagher@bignerdranch.com>"]
+edition = "2018"
 
 [dependencies]
-serde = "0.8"
-serde_derive = "0.8"
-serde_json = "0.8"
+serde = "1.0"
 futures = "0.1"
+tokio = "0.1"
+tokio-codec = "0.1"
 tokio-core = "0.1"
 byteorder = "1.0"
 tokio-chat-common = { path = "../tokio-chat-common" }
